[ConfigNode] Address lifecycle lock review feedback